[package]
name = "frontier_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
spin = "0.9.8"
bitflags = "2.4.0"
bit_field = "0.10.2"
enum-group = "0.1.2"
thiserror-no-std = "2.0.2"
hmac-sha256 = "1.1.7"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
